psome changes to charges css

--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -4,7 +4,7 @@ footer {
   width:100%;
   height:3em;
   padding:1em;
-  background-color:#4C4951;
+  background-color:#202020  ;
   color:white;
   text-align:center;
   position:fixed;
