--- a/app/views/charges/_credit_card_form.html.erb
+++ b/app/views/charges/_credit_card_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag "#", :id => "credit-card-form", :"data-form"=> locals[:form_id]   do %>
   <div class="row">
     <div class="col-sm-12">
-      <div class="new-card-form">
+      <div class="well new-card-form">
         <%= text_field_tag :credit_card_number, nil, :class => "form-control", :placeholder => "Credit Card Number"  %> 
         <div class="row"> 
           <div class="col-xs-4">
