--- a/app/assets/stylesheets/charges.css
+++ b/app/assets/stylesheets/charges.css
@@ -10,5 +10,7 @@ fieldset { overflow:hidden }
 label { float:left; clear:none; padding: 2px 1em 0 0; }
 input[type=radio], input.radio { float:left; clear:none; margin: 2px 0 0 2px; width:25px; border: none;}
 
+.choose-account-option { padding-bottom: 10px;}
+
 .choose-account-option > .alpha { border-top-left-radius: 5px 5px; border-bottom-left-radius: 5px 5px;}
 .choose-account-option > .beta { border-top-right-radius: 5px 5px; border-bottom-right-radius: 5px 5px;}
