--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -1,6 +1,6 @@
 //all for the TOPBAR
 @media (max-width: 520px) {
-  .topbar + div { padding-top: 80px !important; }
+  .topbar + div { margin-top: 90px !important; }
   .prgs-bar { display: block; width: 100% !important;}
   .topbar { padding: 0 2px 4px 2px !important; }
   .top-bar .my-gear { float: right !important;}
