--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,13 +72,14 @@
 			<%end%>
 		</div>
 		</div> <!--ENDS TOPBAR-->
-
-		<% if flash[:notice] %>
-			<div class="notice"><%= flash[:notice] %></div>
-		<% end %>
-		<% if flash[:error] %>
-			<div class="flash-error"> <%= flash[:error] %> </div>
-		<% end %>
+		<div class="flash"> 
+			<% if flash[:notice] %>
+				<div class="notice"><%= flash[:notice] %></div>
+			<% end %>
+			<% if flash[:error] %>
+				<div class="f-error"> <%= flash[:error] %> </div>
+			<% end %>
+		</div>
 			
 
 		<div id="order-form" class="the-menu">
