added some basic analytics

--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -116,7 +116,7 @@ table.table {
 }
 .panel {
   border-radius: 0px;
-    box-shadow: 0px 0px 5px #888;
+/*    box-shadow: 0px 0px 5px #888;*/
 
 }
 
