--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -126,7 +126,7 @@ div.list-group.select .list-group-item  {
   border-radius: 0px;
   background-color: white;
   border-color: #ddd;
-  
+  font-size:1.4em;
   color: $red;
   font-weight:900;
 
