--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,8 +6,8 @@
   <body>
     <h1>Welcome to Shnack!, <%= @user.name %></h1>
     <p>
-      You have successfully signed up to Shnack,
-      your username is: <%= @user.login %>.<br/>
+      You have successfully signed up to Shnack, and $5.00 has been credited to your account.
+      Enjoy!
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
