--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -10,6 +10,16 @@
 .pad      { padding: 20px; }
 .pad-lrg  { padding: 30px; }
 
+.pad-x-sml  { padding-left: 10px; padding-right: 10px; }
+.pad-x      { padding-left: 20px; padding-right: 20px; }
+.pad-x-lrg  { padding-left: 30px; padding-right: 30px; }
+.pad-x-xlrg  { padding-left: 45px; padding-right: 45px; }
+
+.pad-y-sml  { padding-top: 10px; padding-bottom: 10px; }
+.pad-y      { padding-top: 20px; padding-bottom: 20px; }
+.pad-y-lrg  { padding-top: 30px; padding-bottom: 30px; }
+.pad-y-xlrg  { padding-top: 45px; padding-bottom: 45px; }
+
 .pad-right-sml { padding-right: 10px; } 
 .pad-left-sml { padding-left: 10px; } 
 .pad-top-sml { padding-top: 10px; } 
