--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,16 +101,17 @@
 	<% end %>
 
 	<section class="wrapper" style=" background-color: darkseagreen; padding: 10px; color:white;">
-			<div class="row-new" >
+		<div class="row-new" >
 			<div class="column-mobile twelve" style="text-align:center;">
 				<h3>How It Works</h3>
 			</div>
 		</div>
 	</section>
-	<section class="wrapper last" >
+
+
+	<section class="wrapper-darkseagreen" style="padding-bottom:65px;">
 	
-		<div class="row-new pad-y-sml easy-123">
-			
+		<div class="row-new pad-y easy-123">
 			<div class="column-mobile four">
 				<h2>1. Select your location</h2>
 				<span class="i-location"></span>
@@ -127,16 +128,12 @@
 				<p>Sit back, skip the line, & pickup your food</p>
 			</div>
 		</div>
+
 	</section>
 
-	<footer>
-			<div class="container">
-					
-				<a href="/howdy" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
-					<a href="#top" class="place-order">Return to top</a>
-
-
-			</div>
+	<footer class="pad-y-lrg">
+		<a href="/howdy" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
+		<a href="#top" class="place-order">Return to top</a>
 	</footer>
 
 </body>
