--- a/app/assets/stylesheets/custom-resizing.css.scss
+++ b/app/assets/stylesheets/custom-resizing.css.scss
@@ -10,15 +10,13 @@
   .top-bar .my-gear { float: right !important;}
   .topbar a h3 { font-size: 2.5em; }
   .topbar .my-gear img { width: 30px; height: 30px; }
-  .caje-info { font-size: 1.5em; };
-
 }
 
 //all for easy-123
 @media (max-width: 520px) {
   .easy-123 {
     h1 { font-size: 2em;  }
-    .i-easy-123 { font-size: 64px; }
+    span { font-size: 64px; }
     p { font-size: 16px; }
   }
 
@@ -43,23 +41,6 @@
 
     p {
       font-size: 18px !important;
-    }
-  }
-}
-
-//PHONE SIZE
-@media (max-width: 520px) {
-  .step-style {
-    img {
-      width: 80px;
-    }
-
-    h1 {
-      font-size: 2em;
-    }
-
-    p {
-      display: none;
     }
   }
 }
