--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to Shnack!, <%= @user.name %></h1>
+    <h1>Welcome to Shnack, <%= @user.name %>!</h1>
     <p>
       You have successfully signed up to Shnack, and $5.00 has been credited to your account.
       Enjoy!
