deleted empty files, moved things around

--- a/app/assets/stylesheets/_utilities.scss
+++ b/app/assets/stylesheets/_utilities.scss
@@ -1,4 +1,4 @@
-@import "vars";
+@import "base/vars";
 
 .clear-fix:before     { content: ' '; display: table; }
 .clear-fix:after      { content: ' '; display: table; clear: both; }
