--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -131,7 +131,7 @@
 
 	</section>
 
-	<footer class="pad-y-lrg">
+	<footer class="banner pad-y-lrg">
 		<a href="/howdy" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
 		<a href="#top" class="place-order">Return to top</a>
 	</footer>
