--- a/app/assets/stylesheets/styles-general.css.scss
+++ b/app/assets/stylesheets/styles-general.css.scss
@@ -1,40 +1,8 @@
-@import "base/mixins", "base/vars";
-
-footer {
-  width:100%;
-  height:3em;
-  padding:1em;
-  background-color:#202020  ;
-  color:white;
-  text-align:center;
-  position:fixed;
-  bottom: 0;
-  left: 0;
-
-  & > .container {
-    max-width:900px;
-  }
-
-  a.place-order {
-    color:white;
-  }
-  a.learn-more {
-    position:fixed;
-    right:10px;
-    color:white;
-  }
-
-  @media(max-width:520px) {
-      a.learn-more {
-        display:none;
-      }
-  }
-}
-
+@import "mixins", "base/vars";
 
   
 
-  .sign-up-page-deal {
+.sign-up-page-deal {
   h4 {
     background-color: $green;
     color: $white;
