changing join page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -162,3 +162,16 @@ footer.fb {
     }
   } 
 }
+
+.why-shnack {
+  ul {
+    padding-top:-10px;
+    padding-left:20px;
+    font-size: 1.4em;
+  }
+
+}
+.contact-form {
+  border-color: darkgray;
+  background-color:GHOSTWHITE;
+}
