--- a/app/views/contact_us/email_shnack.html.erb
+++ b/app/views/contact_us/email_shnack.html.erb
@@ -1,8 +1,4 @@
 <h1><%= @customer_name %> wants to talk</h1>
 <h2>Contact Email: <%= @customer_email %></h2>
-    <p>
-    From the Shnack Contact Us form:
-    </p>
-    <p>
-    	<%= @customer_message %>
-    </p>
+<h2> Contact Number: <%= @customer_number %></h2>
+<h2> Restaurant Name: <%= @customer_restaurant %> </h2>
