--- a/app/views/application/join.html.erb
+++ b/app/views/application/join.html.erb
@@ -27,7 +27,7 @@
 
 </head>  
 
-  <body>
+  <body id="join">
 
     <section class="wrapper-white pad-y-xlrg">
       <div class="my-container">
@@ -40,7 +40,7 @@
               <li> Allow customers to order quickly and easily from their phone</li>
               <li> Access our network of regular customers </li>
               <li> Manage incoming orders with our intuitive and easy to use iPad application </li>
-              <li> Training + Menu Input Provided </li>
+              <li> We provide set up, training and menu input </li>
               <li> 24/7 Support </li>
             </uL>
             
