--- a/app/assets/stylesheets/wrench.css.scss
+++ b/app/assets/stylesheets/wrench.css.scss
@@ -2,9 +2,9 @@
   to keep the styles seperate from bootstrap.
   In the end this will replace application.css.scss */
 
-@import url(http://fonts.googleapis.com/css?family=Dosis:400,500,700);
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Damion);
-@import url(http://fonts.googleapis.com/css?family=Indie+Flower);
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 @import "font-awesome";
 
 //@import "bootstrap";
