--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,7 +34,9 @@
 
 @import "charges", "custom-resizing", "orders", "sign_in", "styles-general";
 
-
+#top {
+  margin-top:100px;
+}
 
 
 tbody.all_the_mods tr {
