--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -130,20 +130,26 @@ footer.fb {
 
 #join {
   section:first-child {
-    margin-top:50px;
+    padding-bottom:20px;
+    background-color:LIGHTSALMON;
   }
 
-.why-shnack {
-  ul {
-    padding-top:-10px;
-    padding-left:20px;
-    font-size: 1.4em;
+  .why-shnack {
+    ul {
+      padding-top:-10px;
+      padding-left:20px;
+      font-size: 1.4em;
+    }
+
+  }
+  .contact-form {
+    border-color: darkgray;
+    background-color:LEMONCHIFFON;
   }
 
-}
-.contact-form {
-  border-color: darkgray;
-  background-color:LEMONCHIFFON;
-}
-
+  #images {
+    img {
+      width:33%;
+    }
+  }
 }
