--- a/app/views/application/join.html.erb
+++ b/app/views/application/join.html.erb
@@ -28,6 +28,9 @@
 </head>  
 
   <body id="join">
+    <section>
+
+    </section>
 
     <section class="wrapper-white pad-y-xlrg">
       <div class="my-container">
@@ -53,6 +56,12 @@
       </div>
     </section>
 
+
+    <section class="wrapper" id="images">
+      <%= image_tag "real_images/OrdersCloseUp.jpg"%>
+      <%= image_tag "real_images/MenuDropDown.jpg" %>
+      <%= image_tag "real_images/CajeShnack.jpg" %>
+    </section>
 
    
     <footer class="fb">
