--- a/app/views/application/join.html.erb
+++ b/app/views/application/join.html.erb
@@ -58,9 +58,11 @@
 
 
     <section class="wrapper" id="images">
-      <%= image_tag "real_images/OrdersCloseUp.jpg"%>
-      <%= image_tag "real_images/MenuDropDown.jpg" %>
-      <%= image_tag "real_images/CajeShnack.jpg" %>
+      <div class="container">
+        <%= image_tag "real_images/OrdersCloseUp.jpg"%>
+        <%= image_tag "real_images/MenuDropDown.jpg" %>
+        <%= image_tag "real_images/CajeShnack.jpg" %>
+      </div>
     </section>
 
    
