--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
 	<div class="wrapper" id="top">
 		<div id="topbar" class="row-new topbar clear-fix">
-			<div class="topbar-container">
+			<div class="my-container">
 
 				<a href="/"><h3 class="column two">Shnack</h3></a>
 
@@ -72,6 +72,7 @@
 				<%end%>
 			</div>
 		</div> <!--ENDS TOPBAR-->
+
 		<div class="flash"> 
 			<% if flash[:notice] %>
 				<div class="notice"><%= flash[:notice] %></div>
@@ -135,7 +136,7 @@
 	<footer class="popup-banner pad-y-lrg">
 
 		<a href="/join" class="learn-more"> Want to become a part of the Shnack Community? Learn More </a>
-		<a href="#top" class="place-order">Return to top</a>
+		<a href="#top_now" class="place-order">Return to top</a>
 	</footer>
 
 </body>
