--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -21,7 +21,13 @@ p {
   margin-bottom: 12px;
 }
 
- body {
+body {
+  /* because the topbar always takes space fixed
+  on top, removed from the regular flow */
+  margin-top: 70px;
+  @media (max-width: 520px) {
+    margin-top: 100px;
+  }
   // background-image: image-url('noise-bg-2.png');
   // background-repeat: repeat;
   //background-color:dimgray;
