basic new route

--- a/app/assets/stylesheets/base/_buttons.scss
+++ b/app/assets/stylesheets/base/_buttons.scss
@@ -1,11 +1,10 @@
 a {
-  font: normal 16px/100% "Dosis", Tahoma, sans-serif;
   text-decoration: none;
   font-weight: 500;
-  color: #01A;
+  //color: #01A;
 
   &:visited {
-    color: #01A;
+    //color: #01A;
   }
 
   &:hover {
