--- a/app/assets/stylesheets/base/_text_presentation.scss
+++ b/app/assets/stylesheets/base/_text_presentation.scss
@@ -1,5 +1,7 @@
 @import "vars";
 
+h1.SSS, h2.SSS, h3.SSS, h4.SSS, h5.SSS, h6.SSS { margin-bottom: 5px; }
+
 h1.SSS {
   font-family: "Damion", serif;
   font-size: 3em;
