--- a/app/views/shnack/manage_vendors.html.erb
+++ b/app/views/shnack/manage_vendors.html.erb
@@ -1,23 +1,32 @@
-<h3> Manage Vendors </h3>
+<h1 class="SSS"> Manage Vendors </h1>
 <% @locations.each do |location| %>
 	<% if location.instance_of?(Stadium) %>
-	<div class="panel panel-default">
-		<div class="panel-heading"><h3 class="panel-title">	<%= location.name %> </h3> </div>
-		<div class="list-group">
-			<% location.vendors.each do |v| %>
-				<%= link_to v.name, edit_stadium_vendor_path(location, v), :class=> "list-group-item" %>
-			<% end %>
-			<%= link_to "Create New Vendor For This Stadium", new_stadium_vendor_path(location), :class => "list-group-item" %>
-		</div>
+	<h2 class="SSS"><%= location.name %> </h2>
+	<div class="list-group">
+		<% location.vendors.each do |v| %>
+			<%= link_to v.name, edit_stadium_vendor_path(location, v), :class=> "list-group-item" %>
+		<% end %>
+		<%= link_to "Create New Vendor For This Stadium", new_stadium_vendor_path(location), :class => "list-group-item" %>
 	</div>
-	<% else %>
+
+	<!-- <div class="panel panel-default">
+		<div class="panel-heading"><h3 class="panel-title">	<%= location.name %> </h3>
+	</div>
 		<div class="list-group">
-			<%= link_to location.name, location, :class => "list-group-item" %>
+			<#% location.vendors.each do |v| %>
+				<#%= link_to v.name, edit_stadium_vendor_path(location, v), :class=> "list-group-item" %>
+			<#% end %>
+			<#%= link_to "Create New Vendor For This Stadium", new_stadium_vendor_path(location), :class => "list-group-item" %>
 		</div>
+	</div> -->
+	<% else %>
+		<h2 class="SSS">
+			<%= link_to location.name, location %>
+		</h2>
 	<% end %>
 
 <% end %>
-	<div class="list-group">
+	<div class="list-group mar-top-lrg">
 		<%= link_to "Create New Stadium", new_stadium_path, :class=>"list-group-item" %>
 		<%= link_to "Create New Restaurant", new_restaurant_path, :class => "list-group-item" %>
 	</div>
