--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -131,7 +131,9 @@ footer.fb {
 }
 
 #join {
+  margin-top:0px;
   section:first-child {
+    padding-top:20px;
     background-color:LIGHTSALMON;
   }
 
