--- a/app/assets/stylesheets/base/_css_reset.scss
+++ b/app/assets/stylesheets/base/_css_reset.scss
@@ -15,7 +15,15 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal; line-height: 100%; }
 small { color: #666; }
 
 
-ol li { display: inline-block; } //why not
+ol > * {
+  display: inline-block;
+}
+
+ol li {
+  display: inline-block;
+  &:not(:last-child) { margin-right: 10px; }
+} //why not
+
 p { 
   font-size: 22px;
   margin-bottom: 12px;
