--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,92 +1,69 @@
+<% content_for :page_title do%>
+Manage Restaurant
+<% end %>
 
 <h2 class="SSS"> <%= @restaurant.name %> </h2>
 
-<ol class="generic">
-	<li><%= link_to "My Restaurant", restaurant_path(@restaurant), {:method => 'get'} %></li>
-	<li><%= link_to "My Menu", my_menu_restaurant_path(@restaurant), {:method => 'get'} %></li>
-	<li></li>
-</ol>
+<div class="row-new management">
+	<div class="column four"><%= link_to "My Restaurant", restaurant_path(@restaurant), {:method => 'get'} %></div>
+	<div class="column four"><%= link_to "Recent Orders", recent_orders_restaurant_path(@restaurant), {:method => 'get'} %></div>
+	<div class="column four"><%= link_to "My Menu", my_menu_restaurant_path(@restaurant), {:method => 'get'} %></div>
+</div>
 
-<%= button_to "My Menu", my_menu_restaurant_path(@restaurant), {:method => 'get', :class => "btn btn-info" } %>
+<h2 class="SSS">My Restaurant</h2>
+<div class="row-new well">
+	<div class="column-mobile six clear-fix">
+		<strong> Amount Available: </strong> <%= Order.integer_to_currency @amount %>
+		<br />
+		<% if @amount == 0 %>
+			<%= button_to "Nothing to Withdraw", '/#', { :class => "action-btn disabled mar-y", disabled: "disabled" } %>
+		<% else %>
+			<%= button_to "Withdraw", withdraw_funds_restaurant_path(@restaurant), { :class => "action-btn blue mar-y", :method => 'post' } %>
+		<% end %>
 
-	<div class="well">
-		<div>
-			<strong> Amount Available: </strong> <%= Order.integer_to_currency @amount %><br />
-			<% if @amount == 0 %>
-				<%= button_to "Withdraw", '/#', { :class => "btn btn-success disabled"} %>
-			<% else %>
-				<%= button_to "Withdraw", withdraw_funds_restaurant_path(@restaurant), { :class => "btn btn-success", :method => 'post' } %>
-			<% end %>
-			<div style="padding-top:10px;">
-			<%= button_to "Recent Orders", recent_orders_restaurant_path(@restaurant), {:method => 'get', :class => "btn btn-info" } %> </div>
-		</div>
-
-
-
-		<div style="padding-top:10px; padding-bottom:30px;">
-
-			<% if @account.nil? %>
-				<%= button_to "Add Bank Account", bank_account_restaurant_path(@restaurant), { :class => "btn btn-primary", :method => 'get' } %>
-			<% else %>
-				<strong>Bank Account:</strong>  <%= @account.bank_name %> <%= @account.last4 %>	
-				<%= button_to "Change Bank Account", bank_account_restaurant_path(@restaurant), { :class => "btn btn-primary", :method => 'get' } %>
-			<% end %>
-		</div>
-
-		<div style="padding-top:10px; padding-bottom:30px;">
-			<strong> Status of Your Last Transfer: </strong> 
-				<% if @transfer.nil? %> None
-				<% else %><strong> <%= @transfer.status %> </strong>
-				<% end %>
-
-
-		</div>
+		<% if @account.nil? %>
+			<%= button_to "Add Bank Account", bank_account_restaurant_path(@restaurant), { :class => "action-btn mar-y", :method => 'get' } %>
+		<% else %>
+			<strong>Bank Account:</strong>  <%= @account.bank_name %> <%= @account.last4 %>	
+				<%= button_to "Change Bank Account", bank_account_restaurant_path(@restaurant), { :class => "action-btn mar-y", :method => 'get' } %>
+		<% end %>
 	</div>
+	<div class="column-mobile six clear-fix">
+		<strong> Status of Your Last Transfer: </strong> 
+		<% if @transfer.nil? %> None
+		<% else %><strong> <%= @transfer.status %> </strong>
+		<% end %>
+	</div>
+</div>
 
 
+<% if current_user.is_super? %>
+	<section class="wrapper pad-y-xlrg">
+		<h4 class="SSS">Managers</h4>
 
-	<% if current_user.is_super? %>
-		<table class="table">
-			
-			<tr> <th colspan="2"> Managers </th> </tr>
-			<% @restaurant.roles.each do |role| %>
-				<tr> <td> <%= role.user.email %> </td></tr>
-			<% end %>
+		<% @restaurant.roles.each do |role| %>
+			<div> <%= role.user.email %> </div>
+		<% end %>
 
-			
-			<%= form_tag add_manager_restaurant_path(@restaurant)  do %>
-			<tr>
-				<td> Add Manager By Email </td>
-				<td> <%= text_field_tag :email %> </td>
-			</tr>
-			<tr>
-				<td colspan="2"> 
-					<%= submit_tag nil, class: "push-btn darkslategray" %>
-				</td>
-			</tr>
+		<%= form_tag add_manager_restaurant_path(@restaurant)  do %>
+			<label>Add Manager By Email</label>
+			<ol>
+				<%= text_field_tag :email, nil, class: '' %>
+				<%= submit_tag 'Send Invite', :class => "action-btn green" %>
+			</ol>
+		<% end %>
+	</section>
+<% end %>
 
-			<% end %>
-					
 
-		</table>
-	<% end %>
+<section class="well">
+	<h4 class="SSS">Registration Code:</h4>
+	<%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
+	<br /><br />
+	<h4 class="SSS">Add Tax? - <%= @restaurant.add_tax %></h4>
+	<h4 class="SSS">Tax: <%= @restaurant.tax %></h4>
+	<br />
 
-	<ul class="list-group">
-		<li class="list-group-item">
-			Registration Code: <%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
-		</li>
-		<li class="list-group-item">
-			Add Tax? - <%= @restaurant.add_tax %>
-		</li>
-
-		<li class="list-group-item">
-			Tax: <%= @restaurant.tax %>
-		</li>
-		<li class="list-group-item">
-			<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant) %>
-		</li>
-		<li class="list-group-item">
-			<%= link_to "Delete Restaurant", restaurant_path(@restaurant), :method => :delete %>
-		</li>
-
-	</ul> 
+	<%= link_to "Edit Restaurant", edit_restaurant_path(@restaurant), class: "action-btn" %>
+	<%= link_to "Delete Restaurant", restaurant_path(@restaurant), :method => :delete, class: "action-btn red right" %>
+</section>
