partials n looking good

--- a/app/assets/stylesheets/styles-general.css.scss
+++ b/app/assets/stylesheets/styles-general.css.scss
@@ -70,6 +70,10 @@ footer.popup-banner {
 }
 /* //#4C4951*/
 
+span.tax {
+  font-size: 75%;
+}
+
 .i-location {
   font-family: 'FontAwesome';
   font-size: 102px;
