--- a/app/views/application/styleguide.html.erb
+++ b/app/views/application/styleguide.html.erb
@@ -10,147 +10,153 @@
 </head>
 
 <body>
+    <div class="wrapper pad-lrg">
+        <span>h1..6 with SSS class (the styles to switch to)</span>
+        <hr>
 
-    <hr>
-    <span>h1..6 with SSS class (the styles to switch to)</span>
-    <hr>
+        <span>h1.SSS</span><h1 class="SSS">Hello world</h1>
+        <span>h2.SSS</span><h2 class="SSS">Welcome To Myy</h2>
+        <span>h3.SSS</span><h3 class="SSS">Shnack Attack</h3>
+        <span>h4.SSS</span><h4 class="SSS">Enjoy your stay</h4>
+        <span>h5.SSS</span><h5 class="SSS">come again</h5>
+        <span>h6.SSS</span><h6 class="SSS" >Hello world</h6>
 
-    <h1 class="SSS">Hello world</h1><span>h1.SSS</span>
-    <h2 class="SSS">Hello world</h2><span>h2.SSS</span>
-    <h3 class="SSS">Hello world</h3><span>h3.SSS</span>
-    <h4 class="SSS">Hello world</h4><span>h4.SSS</span>
-    <h5 class="SSS">Hello world</h5><span>h5.SSS</span>
-    <h6 class="SSS" >Hello world</h6><span>h6.SSS</span>
+        <hr>
+        <span>Basic Paragraph tags</span>
+        <hr>
 
-    <hr>
-    <span>Generic h1..6 with small inside</span>
-    <hr>
+        <p class="span9">Basic < p > tags with span9. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. </p>
+        <p class="span6">Span6 Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
 
-    <h1>Hello world<small>and hello to you</small></h1>
-    <h2>Hello world<small>and hello to you</small></h2>
-    <h3>Hello world<small>and hello to you</small></h3>
-    <h4>Hello world<small>and hello to you</small></h4>
-    <h5>Hello world<small>and hello to you</small></h5>
-    <h6>Hello world<small>and hello to you</small></h6>
+        <hr>
+        <span>Generic button and anchor</span>
+        <hr>
 
-    <hr>
-    <span>Basic Paragraph tags</span>
-    <hr>
+        <button class="">Button</button>
+        <button class="red">Button red</button>
+        <button class="brown">Button brown</button>
+        <button class="green">Button blue</button>
+        <button class="blue">Button green</button>
+        <button class="darkslategray">Button darkslategray</button>
 
-    <p>Lorem ipsum un sit doler</p>
+        <a href="#">Anchor</a>
 
-    <hr>
-    <span>Generic button and anchor</span>
-    <hr>
+        <hr>
+        <span>Buttons/Anchors with class action-btn</span>
+        <hr>
 
-    <button>Button</button>
-    <a href="#">Anchor</a>
-
-    <hr>
-    <span>Buttons/Anchors with class action-btn</span>
-    <hr>
-
-    <button class="action-btn">Action Button</button>
-    <button class="action-btn red">Action Button</button>
-    <button class="action-btn brown">Action Button</button>
-    <button class="action-btn green">Action Button</button>
-    <button class="action-btn blue">Action Button</button>
-    <button class="action-btn darkslategray">Action Button</button>
+        <button class="action-btn">Action Button</button>
+        <button class="action-btn red">Action Button</button>
+        <button class="action-btn brown">Action Button</button>
+        <button class="action-btn green">Action Button</button>
+        <button class="action-btn blue">Action Button</button>
+        <button class="action-btn darkslategray">Action Button</button>
 
 
-    <br>
+        <br>
 
-    <a href="#" class="action-btn">Action Anchor</a>
-    <a href="#" class="action-btn red">Action Anchor</a>
-    <a href="#" class="action-btn brown">Action Anchor</a>
-    <a href="#" class="action-btn green">Action Anchor</a>
-    <a href="#" class="action-btn blue">Action Anchor</a>
-    <a href="#" class="action-btn darkslategray">Push Anchor</a>
-
-
-    <hr>
-    <span>Buttons/Anchors with class push-btn</span>
-    <hr>
-
-    <button class="push-btn">Push Button</button>
-    <button class="push-btn red">Push Button</button>
-    <button class="push-btn green">Push Button</button>
-    <button class="push-btn blue">Push Button</button>
-    <button class="push-btn brown">Push Button</button>
-    <button class="push-btn darkslategray">Push Button</button>
+        <a href="#" class="action-btn">Action Anchor</a>
+        <a href="#" class="action-btn red">Action Anchor</a>
+        <a href="#" class="action-btn brown">Action Anchor</a>
+        <a href="#" class="action-btn green">Action Anchor</a>
+        <a href="#" class="action-btn blue">Action Anchor</a>
+        <a href="#" class="action-btn darkslategray">Push Anchor</a>
 
 
-    <br>
-
-    <a href="#" class="push-btn">Push Anchor</a>
-    <a href="#" class="push-btn red">Push Anchor</a>
-    <a href="#" class="push-btn green">Push Anchor</a>
-    <a href="#" class="push-btn blue">Push Anchor</a>
-    <a href="#" class="push-btn brown">Push Anchor</a>
-    <a href="#" class="push-btn darkslategray">Push Anchor</a>
-
-
-    <hr>
-    <span>Generic text inputs</span>
-    <hr>
+        <hr>
+        <span>Buttons/Anchors with class push-btn</span>
+        <hr>
+        <section class="my-container-half gen-inline-block mar-bot-children">
+            <button class="push-btn">Push Button</button>
+            <button class="push-btn red">Push Button</button>
+            <button class="push-btn green">Push Button</button>
+            <button class="push-btn blue">Push Button</button>
+            <button class="push-btn brown">Push Button</button>
+            <button class="push-btn darkslategray">Push Button</button>
+        </section>
 
 
-    <textarea>Text Area</textarea>
-    <input type="textfield" />
+        <section class="my-container-half gen-inline-top mar-bot-children">
+        <a href="#" class="push-btn">Push Anchor</a>
+        <a href="#" class="push-btn red">Push Anchor</a>
+        <a href="#" class="push-btn green">Push Anchor</a>
+        <a href="#" class="push-btn blue">Push Anchor</a>
+        <a href="#" class="push-btn brown">Push Anchor</a>
+        <a href="#" class="push-btn darkslategray">Push Anchor</a>
+    </section>
 
-    <hr>
-    <span>class="input-list"</span>
-    <p>Add this div to a container to mimic these results. Will strech to fill the parent.</p>
-    <hr>
+        <hr>
+        <span>Generic text inputs</span>
+        <hr>
 
-    <div class="input-list">
-        <h2>Filter by</h2>
 
-        <label>Resource:</label>
-        <select id="filter1" name="Filter 1"></select>
+        <textarea>Text Area</textarea>
+        <input type="textfield" />
 
-        <label>Something with info help:</label>
-        <input type="text" class="with-info" />
-        <span class="fa fa-info-circle"></span>
+        <hr>
+        <span>class="input-list"</span>
+        <p>Add this div to a container to mimic these results. Will strech to fill the parent.</p>
+        <hr>
 
-        <label>Basic:</label>
-        <input type="text" placeholder="Fill me in!"/>
+        <div class="input-list">
+            <h2>Filter by</h2>
 
-        <label>
-          <input type="checkbox">
-          Input before Checkbox
-        </label>
+            <label>Resource:</label>
+            <select id="filter1" name="Filter 1"></select>
 
-        <label>
-          Or after works fine
-          <input type="checkbox">
-        </label>
+            <label>Something with info help:</label>
+            <input type="text" class="with-info" />
+            <span class="fa fa-info-circle"></span>
 
-        <label>Textarea:</label>
-        <textarea>Lorem Ipsum</textarea>
+            <label>Basic:</label>
+            <input type="text" placeholder="Fill me in!"/>
 
-        <label>
-          <input type="radio" name="frontendftw">
-          Option 1
-        </label>
+            <label>
+              <input type="checkbox">
+              Input before Checkbox
+            </label>
 
-        <label>
-          <input type="radio" name="frontendftw">
-          Option 2
-        </label>
+            <label>
+              Or after works fine
+              <input type="checkbox">
+            </label>
 
-      </div>
+            <label>Textarea:</label>
+            <textarea>Lorem Ipsum</textarea>
 
-    <ul>
-      <li>One</li>
-      <li>Two</li>
-    </ul>
+            <label>
+              <input type="radio" name="frontendftw">
+              Option 1
+            </label>
 
-    <ol>
-      <li>ABC</li>
-      <li>XYZ</li>
-    </ol>
+            <label>
+              <input type="radio" name="frontendftw">
+              Option 2
+            </label>
 
+          </div>
+
+        <ul>
+          <li>One</li>
+          <li>Two</li>
+        </ul>
+
+
+        <h6 class="SSS">An ordered list and it's first descendants < li > or not will display inline.</h6>
+        <ol>
+          <li>ABC</li>
+          <li>XYZ</li>
+        </ol>
+
+        <hr>
+
+        <div class="my-well-lemon seven"><p>This is class my-well-lemon. Basically I took the simple idea from bootstrap. But now we have much better control. This is class my-well-lemon. Basically I took the simple idea from bootstrap. But now we have much better control</p>
+        <p>also with < p > tags and class five added to the well</p></div>
+
+        <div class="my-well-seagreen four"><p>This is class my-well-seagreen four. NOTE four not span4. whole words are perctanges, while spanX is a max-width. Both are on a base 12 for 100% yadda mean? This is class my-well-seagreen four.</div>
+
+        <div class="my-well five">And finally the classic my-well five</div>
+    </div>
 
 </body>
 </html>
