--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -47,7 +47,7 @@
 <% end %>
 
 
-<section class="well">
+<section class="my-well-lemon">
 	<h4 class="SSS">Registration Code:</h4>
 	<%= @restaurant.registration_code %> <%= link_to "Generate new code", new_registration_code_restaurant_path(@restaurant) %>
 	<br /><br />
