--- a/app/assets/stylesheets/modules/my_wells.css.scss
+++ b/app/assets/stylesheets/modules/my_wells.css.scss
@@ -23,3 +23,17 @@
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+
+
+.my-well-seagreen {
+  min-height: 18px;
+  padding: 18px;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-bottom: 20px;
+  background-color: darkseagreen;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
